Salesforce CPQ/main/default/objects/ProcessInput__c/ProcessInput__c.object-meta.xml
<CustomObject>
    <customHelpPage>ProcessInputHelp</customHelpPage>
    <description>Input into a quote process. Information collected by inputs can be used to drive product selection and configuration.</description>
    <label>Process Input</label>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>