Salesforce CPQ/main/default/objects/ProcessInput__c/fields/BinaryChoice__c.field-meta.xml
<CustomField>
    <fullName>BinaryChoice__c</fullName>
    <label>Binary Choice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>