Salesforce CPQ/main/default/objects/ProcessInput__c/fields/InputField__c.field-meta.xml
<CustomField>
    <fullName>InputField__c</fullName>
    <description>The API name for the field that accepts the user entry.</description>
    <inlineHelpText>Select the API name for the field that accepts the user entry.</inlineHelpText>
    <label>Input Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BinaryChoice__c</fullName>
            </value>
            <value>
                <fullName>IntegerInput__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>