Salesforce CPQ/main/default/objects/ProcessInput__c/fields/IntegerInput__c.field-meta.xml
<CustomField>
    <fullName>IntegerInput__c</fullName>
    <inlineHelpText>Enter a numerical value.</inlineHelpText>
    <label>Integer Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>