Salesforce CPQ/main/default/objects/ProcessInput__c/fields/ProcessInputCondition__c.field-meta.xml
<CustomField>
    <fullName>ProcessInputCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Input Condition</label>
    <referenceTo>ProcessInputCondition__c</referenceTo>
    <relationshipLabel>Process Inputs</relationshipLabel>
    <relationshipName>ProcessInputCondition</relationshipName>
    <type>Lookup</type>
</CustomField>