Salesforce CPQ/main/default/objects/ProcessInput__c/fields/QuoteProcess__c.field-meta.xml
<CustomField>
    <fullName>QuoteProcess__c</fullName>
    <description>Quote process that owns the input.</description>
    <inlineHelpText>Quote process that owns the input.</inlineHelpText>
    <label>Quote Process</label>
    <referenceTo>QuoteProcess__c</referenceTo>
    <relationshipLabel>Process Inputs</relationshipLabel>
    <relationshipName>Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>