Salesforce CPQ/main/default/objects/ProcessInput__c/validationRules/ProductFieldAndOperatorSet.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductFieldAndOperatorSet</fullName>
    <active>true</active>
    <description>If a Product Field is defined, an Operator must also be defined.</description>
    <errorConditionFormula>OR(AND(!ISBLANK(TEXT(ProductField__c)),(ISBLANK(TEXT(Operator__c)))),AND(ISBLANK(TEXT(ProductField__c)),(!ISBLANK(TEXT(Operator__c)))))</errorConditionFormula>
    <errorMessage>Both Product Field and Operator must be set if either are set.</errorMessage>
</ValidationRule>