Salesforce CPQ/main/default/objects/ProcessInput__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DisplayOrder__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>InputField__c</columns>
    <columns>ProductField__c</columns>
    <columns>Operator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>